# jataka

./: Readme.txt  pyproject.toml
src/jataka/: api.py  preprocess.py
src/jataka/data/json/: jataka.json
src/jataka/data/text/: jataka.txt
