[tool.poetry]
name = "jataka"
version = "0.1.0"
description = "api that returns phrases from jataka tails."
authors = ["rahulunair <rahulunair@gmail.com>"]
license = "UNLICENSE"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
